# User-beclean-

./: README.md  pubspec.yaml
android/: gradle.properties
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt
assets/services/bloc/: register_bloc.dart  working_bloc.dart
assets/services/event/: register_event.dart  working_event.dart
assets/services/state/: register_state.dart  working_state.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/controllers/: authentication_controller.dart
lib/controllers/repository/: auth_repository.dart
lib/model/: account_model.dart  login_userModel.dart  notification_model.dart  user_model.dart
lib/model/mutation_model/: mutation.dart
lib/model/product_model/: product.dart
lib/models/: authentication_model.dart  login_model.dart  user_model.dart
lib/provider/: account_provider.dart  user_provider.dart
lib/screens/: change_password_screen.dart  change_profile_screen.dart  login_screen.dart  onboarding_screen_tree.dart  onboarding_screen_two.dart  pickup_screen.dart  register_screen.dart  schedule_notification_screen.dart  splash_screen_one.dart  transportation_schedule_screen.dart
lib/screens/nav/: home_nav.dart  (+3 more)
lib/services/: service_account.dart
lib/widgets/: component_home_nav.dart  notification_widget.dart  wasted_button.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+11 files in other folders)
